@@ -1,6 +1,7 @@
 gurpmi
 gurpmi.desktop.in
 gurpmi.pm
+gurpm/RPMProgressDialog.pm
 gurpmi2
 inst.list
 Makefile.PL
