@@ -6,6 +6,7 @@
     there're no update media (#1024)' as it break looking for deps in other media
     with --update (mga#2317)
 - gurpmi:
+  o split global progress bar widget for rpmdrake (mga#778)
   o support exceptions in callback in main wrapper too
   o support other distros which do not handle exceptions in gtk+ callbacks
   o use new exception management
